@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.1 2018/02/12 19:33:43 minskim Exp $
+$NetBSD: distinfo,v 1.2 2019/07/31 20:44:35 brook Exp $
 
-SHA1 (R/pbdZMQ_0.3-2.tar.gz) = 152875362ddddca7f512e15aa1159836b864eb71
-RMD160 (R/pbdZMQ_0.3-2.tar.gz) = cd01d0021abc301114a9da16d22602651ff8486d
-SHA512 (R/pbdZMQ_0.3-2.tar.gz) = a4d88279f46ae648a2d7e0a563a9e43c53656f4d855b6e73221c04a852383b03d25d722bb3a42363b375e93996a50a4ae7d88444763cf82f1405fb7298239286
-Size (R/pbdZMQ_0.3-2.tar.gz) = 1052241 bytes
+SHA1 (R/pbdZMQ_0.3-3.tar.gz) = ffd1e9f758e9b67df019157a6a4e433864882ee4
+RMD160 (R/pbdZMQ_0.3-3.tar.gz) = 58c0e082007dd9bf08d83f388a8e8169f37e5deb
+SHA512 (R/pbdZMQ_0.3-3.tar.gz) = 3dac074c116b18e1d92f5c9b0cca042ac8d8d1dfcd982b476e9957622cfca38fa94508740376619b5a0a74f73d3e146893358d07ae97214df04096a18eadae9d
+Size (R/pbdZMQ_0.3-3.tar.gz) = 1052217 bytes
