@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3204 2019/07/31 20:42:02 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3205 2019/07/31 20:44:34 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5161,3 +5161,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated math/R-xts to 0.11.2 [brook 2019-07-31]
 	Updated math/R-zoo to 1.8.6 [brook 2019-07-31]
 	Updated misc/R-pillar to 1.4.2 [brook 2019-07-31]
+	Updated net/R-pbdZMQ to 0.3.3 [brook 2019-07-31]
